test02/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: test02
spec:
  selector:
    app: test02
  ports:
    - port: 80
      targetPort: 8000
